# trajectorykit

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  environment.yml  example.py  orchestrate.py  post_process_chain.py  pyproject.toml
configs/: default.yaml
configs/experiments/: gpt_oss_deep_research_bench.yaml  gpt_oss_deepsearchqa.yaml  qwen3_deepsearchqa.yaml
configs/prompts/: chain_analysis.txt  citation_audit.txt  draft_critique.txt  orchestrator.txt  orchestrator_bench.txt  rubric_generator.txt  spotcheck_compare.txt  spotcheck_compare_bench.txt  spotcheck_extract.txt  spotcheck_refusal.txt  synthesizer.txt  verifier.txt  verifier_bench.txt  verifier_external.txt  worker.txt
deep_research_bench_results/: race_result.txt  raw_results.jsonl
docs/: demo_trace.html  index.html
src/trajectorykit/: .gitignore  README.md  __init__.py  agent.py  agent_state.py  apptainer.sh  chain.py  config.py  examples.py  live_trace.py  memory.py  nodes.py  plan.py  runner.py  sandbox_shell.py  serve_vllm.sh  symbolic.py  tool_store.py  tracing.py  use_sandbox_fusion.sh  utils.py
