[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectorykit"
version = "0.1.0"
description = "A lightweight, local-first agentic framework with tool calling, recursive sub-agents, and full execution tracing."
readme = "src/trajectorykit/README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "William Lugoloobi" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests",
    "python-dotenv",
]

[project.urls]
Homepage = "https://github.com/KabakaWilliam/dispatch_v2"
Repository = "https://github.com/KabakaWilliam/dispatch_v2"
Issues = "https://github.com/KabakaWilliam/dispatch_v2/issues"

[project.optional-dependencies]
serve = [
    "vllm>=0.15",
    "torch>=2.9",
    "transformers",
]
all = [
    "vllm>=0.15",
    "torch>=2.9",
    "transformers",
    "matplotlib",
    "openai>=2.0",
    "pydantic",
]

[tool.setuptools.packages.find]
where = ["src"]
